fix scroll overflow to update version?

--- a/wp-content/themes/noblehouse/assets/css/main.styl
+++ b/wp-content/themes/noblehouse/assets/css/main.styl
@@ -420,6 +420,7 @@ body
 						background transparent
 						text-decoration none
 						border-bottom 1px solid rgba($black, 0.3)
+						cursor pointer
 				a
 					display inline-block
 					color $black
@@ -752,6 +753,8 @@ body
 		margin-bottom 0
 	.items-left-right
 		margin 120px 0 120px
+		.item-right
+			margin-bottom 50px
 		&.invert,&.putih
 			.tab-container
 				margin-left -10px
